Fixed small styling bug on next-box in index.html where upon hover the content would spill out

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ footer a {
 #next-box {
     position: absolute;
     font-size: 20px;
-    height: 30px;
+    height: 32px;
     width: 175px;
     bottom: 10%;
     right: 2%;
